Reto4/k8s/login-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-service
  labels:
    app: login-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: login-service
  template:
    metadata:
      labels:
        app: login-service
        version: v1
    spec:
      containers:
      - name: login-service
        image: login-service:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: login-service
  labels:
    app: login-service
spec:
  type: ClusterIP
  ports:
  - port: 8081
    name: http
  selector:
    app: login-service
