Reto4/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: reto4-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reto4-routes
spec:
  hosts:
  - "*"
  gateways:
  - reto4-gateway
  http:
  - match:
    - uri:
        prefix: /api/login
    route:
    - destination:
        host: login-service
        port:
          number: 8081
  - match:
    - uri:
        prefix: /api/order
    route:
    - destination:
        host: order-service
        port:
          number: 8000
  - match:
    - uri:
        prefix: /api/user
    route:
    - destination:
        host: user-service
        port:
          number: 8080
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
        port:
          number: 3000
